dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=nowpd.1
endif

if ENABLE_QT
  dist_man1_MANS+=nowp-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=nowp-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=nowp-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=bitcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=nowp-wallet.1
endif
endif
